--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green_primary">#8ac148</color>
+    <color name="green_light">#bdf478</color>
+    <color name="green_dark">#599014</color>
+    <color name="red_primary">#d32f2f</color>
+    <color name="red_light">#ff6659</color>
+    <color name="red_dark">#9a0007</color>
 </resources>
