--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingTop="10dp"
-    android:paddingRight="10dp"
-    android:paddingBottom="10dp"
     tools:context=".MainActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/app_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ToolBarStyle"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -18,7 +21,10 @@
         android:text="@string/hello_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:visibility="visible" />
+
+        android:visibility="visible"
+        android:layout_marginVertical="5dp"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,14 +32,17 @@
         android:layout_marginBottom="10dp"
         android:text="@string/current_intakes_presentation_text"
         android:textSize="18sp"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"/>
 
     <fragment
         android:id="@+id/fragment"
-        android:name="com.example.food_assistant.dayNutrition"
+        android:name="com.example.food_assistant.DayNutrition"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        tools:layout="@layout/fragment_day_nutrition" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,4 +69,12 @@
 
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_scan_item"
+        android:contentDescription="@string/scan_product_name"
+        android:layout_margin="16dp" />
 </LinearLayout>
