--- a/app/src/main/res/layout/fragment_day_nutrition.xml
+++ b/app/src/main/res/layout/fragment_day_nutrition.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="6dp"
-    tools:context=".dayNutrition">
+    tools:context=".DayNutrition">
 
     <!-- TODO: Update blank fragment layout -->
     <TableLayout
