--- a/app/src/main/res/layout/fragment_day_nutrition.xml
+++ b/app/src/main/res/layout/fragment_day_nutrition.xml
@@ -1,188 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="6dp"
+    android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".DayNutrition">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TableLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:layout_marginBottom="80dp"
+        android:fontFamily="sans-serif-black"
+        android:gravity="center"
+        android:text="@string/hello_text"
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:visibility="visible" />
 
-            <TextView
-                android:id="@+id/textViewCarbs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:gravity="center"
-                android:paddingBottom="2dp"
-                android:text="@string/carbs_name"
-                android:textSize="20sp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="sans-serif"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:text="@string/current_intakes_presentation_text"
+        android:textSize="18sp"
+        android:textStyle="italic" />
 
-            <ProgressBar
-                android:id="@+id/progressBarCarbs"
-                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
-                android:layout_width="337dp"
-                android:layout_height="match_parent"
-                android:progress="50"
-                android:scaleY="6" />
-        </TableRow>
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment"
+        android:name="com.example.food_assistant.NutrientIntake"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textViewSugars"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:gravity="center"
-                android:paddingBottom="2dp"
-                android:text="@string/sugars_name"
-                android:textSize="20sp" />
-
-            <ProgressBar
-                android:id="@+id/progressBarSugars"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="337dp"
-                android:layout_height="match_parent"
-                android:progress="50"
-                android:scaleY="6" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/textViewFats"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:gravity="center"
-                android:paddingBottom="2dp"
-                android:text="@string/fats_name"
-                android:textSize="20sp" />
-
-            <ProgressBar
-                android:id="@+id/progressBarFats"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="337dp"
-                android:layout_height="match_parent"
-                android:progress="50"
-                android:scaleY="6" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/textViewSaturatedFats"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:gravity="center"
-                android:paddingBottom="2dp"
-                android:text="@string/saturated_fats_name"
-                android:textSize="20sp" />
-
-            <ProgressBar
-                android:id="@+id/progressBarSaturatedFats"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="337dp"
-                android:layout_height="match_parent"
-                android:progress="50"
-                android:scaleY="6" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/textViewProteins"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:gravity="center"
-                android:paddingBottom="2dp"
-                android:text="@string/proteins_name"
-                android:textSize="20sp" />
-
-            <ProgressBar
-                android:id="@+id/progressBarProteins"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="337dp"
-                android:layout_height="match_parent"
-                android:progress="50"
-                android:scaleY="6" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:gravity="center"
-                android:paddingBottom="2dp"
-                android:text="@string/fiber_name"
-                android:textSize="20sp" />
-
-            <ProgressBar
-                android:id="@+id/progressBar5"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="337dp"
-                android:layout_height="match_parent"
-                android:progress="50"
-                android:scaleY="6" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:gravity="center"
-                android:paddingBottom="2dp"
-                android:text="@string/salt_name"
-                android:textSize="20sp" />
-
-            <ProgressBar
-                android:id="@+id/progressBar6"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="337dp"
-                android:layout_height="match_parent"
-                android:progress="50"
-                android:scaleY="6" />
-
-        </TableRow>
-
-    </TableLayout>
-
-</FrameLayout>
+</LinearLayout>
