--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:icon="@drawable/ic_scan_item"
-        app:showAsAction="never" />
+    <item android:id="@+id/dayNutrition"
+        android:title="@string/home"
+        android:icon="@drawable/ic_home" />
+    <item android:id="@+id/logMealFragment"
+        android:title="@string/log_meal"
+        android:icon="@drawable/ic_log_meal"/>
+    <item android:id="@+id/historyFragment"
+        android:title="@string/history"
+        android:icon="@drawable/ic_history" />
 </menu>
