--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,5 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/dayNutrition">
 
+    <fragment
+        android:id="@+id/dayNutrition"
+        android:name="com.example.food_assistant.DayNutrition"
+        android:label="fragment_day_nutrition"
+        tools:layout="@layout/fragment_day_nutrition">
+        <action
+            android:id="@+id/action_dayNutrition_to_logMealFragment"
+            app:destination="@id/logMealFragment" />
+        <action
+            android:id="@+id/action_dayNutrition_to_historyFragment"
+            app:destination="@id/historyFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/logMealFragment"
+        android:name="com.example.food_assistant.LogMeal"
+        android:label="fragment_log_meal"
+        tools:layout="@layout/fragment_log_meal" />
+    <fragment
+        android:id="@+id/historyFragment"
+        android:name="com.example.food_assistant.HistoryFragment"
+        android:label="fragment_history"
+        tools:layout="@layout/fragment_history" />
 </navigation>
