--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:layout_marginBottom="0dp"
         android:backgroundTint="#00FFFFFF"
         android:contentDescription="@string/settings"
-        android:src="@drawable/ic_settings" />
+        android:src="@drawable/ic_settings"
+        android:onClick="openSettings"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
