improved scan product activity design

--- a/app/src/main/res/layout/activity_scan_product.xml
+++ b/app/src/main/res/layout/activity_scan_product.xml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/myCoordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ScanProductActivity">
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
         android:layout_height="match_parent"
-        android:layout_width="match_parent" />
+        android:layout_width="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.camera.view.PreviewView>
+
+    <ImageButton
+        android:id="@+id/scanProductCloseButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@null"
+        android:contentDescription="@string/close"
+        android:minWidth="50dp"
+        android:minHeight="50dp"
+        android:onClick="closeActivity"
+        android:tint="@color/dirty_white"
+        app:srcCompat="@drawable/ic_close" />
+
+    <ImageButton
+        android:id="@+id/scanProductPictureButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="20dp"
+        android:background="@null"
+        android:contentDescription="@string/scan_product_name"
+        android:minWidth="50dp"
+        android:minHeight="50dp"
+        android:onClick="processScannedProduct"
+        app:srcCompat="@drawable/circle" />
+
+</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
