--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -29,13 +29,9 @@
         android:textSize="24sp"
         android:textStyle="italic" />
 
-    <ExpandableListView
-        android:id="@+id/favoritesExpandableListView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favoritesRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="0.5dp">
-
-    </ExpandableListView>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
