--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/profile_picture"
-            android:contentDescription="User profile picture"
+            android:contentDescription="@string/your_profile_picture"
             android:cropToPadding="false" />
 
         <LinearLayout
