--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,13 +7,22 @@
     android:orientation="vertical"
     tools:context=".SettingsActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ToolBarStyle"
+        app:titleTextAppearance="@style/ToolBarStyle"
+        app:titleTextColor="#FFFFFF"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/green_primary"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="16dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -45,10 +54,10 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/button"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/red_dark"
+                android:elevation="0dp"
                 android:gravity="center|top"
                 android:text="@string/logout"
                 android:textColor="@color/dirty_white" />
