--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -4,7 +4,7 @@
     android:id="@+id/expandableList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HistoryFragment"
+    tools:context=".Fragments.HistoryFragment"
     android:orientation="vertical">
 
     <TextView
