--- a/app/src/main/res/layout/fragment_nutrient_intake.xml
+++ b/app/src/main/res/layout/fragment_nutrient_intake.xml
@@ -2,7 +2,7 @@
     <TableLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".NutrientIntake"
+        tools:context=".Fragments.NutrientIntakeFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
