--- a/app/src/main/res/layout/fragment_product_consumption_effects.xml
+++ b/app/src/main/res/layout/fragment_product_consumption_effects.xml
@@ -26,7 +26,7 @@
             android:text="Nutri-Score: " />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/nutriScoreGrade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
@@ -39,7 +39,7 @@
             android:text="Nova-Score:" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/novaScoreGrade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
