added dynamic coloring on dashboard nutrient intake bars depending on value and nutrient type

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="red_primary">#d32f2f</color>
     <color name="red_light">#ff6659</color>
     <color name="red_dark">#9a0007</color>
+    <color name="yellow_primary">#FFEB3B</color>
 </resources>
