--- a/app/src/main/res/layout/activity_scan_product.xml
+++ b/app/src/main/res/layout/activity_scan_product.xml
@@ -32,5 +32,34 @@
         android:tint="@color/dirty_white"
         app:srcCompat="@drawable/ic_close" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="visible">
+
+        <Button
+            android:id="@+id/scanTextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:layout_margin="5dp"
+            android:onClick="scanText"
+            android:text="Scan text"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/cancelScanButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:layout_margin="5dp"
+            android:onClick="cancelScanText"
+            android:text="Cancel"
+            android:visibility="invisible" />
+    </LinearLayout>
+
 </FrameLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
