--- a/app/src/main/res/layout/activity_log_generic_food.xml
+++ b/app/src/main/res/layout/activity_log_generic_food.xml
@@ -17,6 +17,7 @@
     </SearchView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_food_lookup"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
